# PluginRecon

./: .gitignore  CMakeLists.txt  vcpkg.json
ConfigFiles/: logConfig.JSON
common/logger/: CMakeLists.txt  configuration.cpp  configuration.h  logger.cpp  logger.h
src/: CMakeLists.txt  main.cpp
src/coreapi/: CMakeLists.txt  coreapi.cpp  coreapi.h  defines.h  pluginapi.cpp  pluginapi.h  pluginmanager.cpp  pluginmanager.h  renderer.h
src/workers/: CMakeLists.txt
src/workers/worker1/: CMakeLists.txt  worker1.cpp
src/workers/worker2/: CMakeLists.txt  worker2.cpp
test/: CMakeLists.txt
